--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,20 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+#仓库名称，就是在bintray官网建立的仓库的名称
+project.repositoryName=easyweb
+#项目名称
+project.name=cartlib //注意:project名字 与 library名字一致 否则会出现上传文件目录结构问题
+#项目组id
+project.groupId=com.lax.ez_web
+#项目id,一般同project.name
+project.artifactId=ez_web
+#打包类型
+project.packaging=aar
+#项目官方网站地址
+project.siteUrl=https://github.com/talkeryang/ez_webkit
+#项目git地址
+project.gitUrl=https://github.com/talkeryang/ez_webkit.git
+#生成的javadoc名称
+#javadoc.name=cartlib
