--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ project.repositoryName=easyweb
 #项目名称
 project.name=cartlib //注意:project名字 与 library名字一致 否则会出现上传文件目录结构问题
 #项目组id
-project.groupId=com.lax.ez_web
+project.groupId=bintray.com.lax
 #项目id,一般同project.name
 project.artifactId=ez_web
 #打包类型
@@ -35,4 +35,4 @@ project.siteUrl=https://github.com/talkeryang/ez_webkit
 #项目git地址
 project.gitUrl=https://github.com/talkeryang/ez_webkit.git
 #生成的javadoc名称
-#javadoc.name=cartlib
+javadoc.name=zewebkit
