--- a/aspectj/build.gradle
+++ b/aspectj/build.gradle
@@ -28,3 +28,5 @@ dependencies {
     //AOP
     api 'org.aspectj:aspectjrt:1.8.13'
 }
+
+apply from: "${rootProject.projectDir}/bintrayUpload.gradle"
