--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,14 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url  "https://bintray.com/lax/easyweb"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.4'
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.4' //aop组件
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1' //用于打包Maven所需文件
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6' //用于上传Maven生成的文件到Bintray
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1" //用于上传JFrog Artifactory本地
