--- a/example/build.gradle
+++ b/example/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.buyluck.example"
+        applicationId "com.lax.example"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
@@ -18,37 +18,23 @@ android {
         manifestPlaceholders = [
                 ADJUST_CODE       : "",
                 ADJUST_TRACK_TOKEN: "",
-                FACEBOOK_APP_ID    : "212367876643688",
+                FACEBOOK_APP_ID   : "212367876643688",
                 UMENG_CHANNEL     : "origin",
         ]
-    }
-
-    signingConfigs {
-        release {
-            Properties properties = new Properties()
-            properties.load(rootProject.file('local.properties').newDataInputStream())
-
-            storeFile file(properties.get('keystore_storeFile'))
-            storePassword properties.get('keystore_storePassword')
-            keyAlias properties.get('keystore_keyAlias')
-            keyPassword properties.get('keystore_keyPassword')
-        }
     }
 
     buildTypes {
         debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
         }
 
         release {
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a","x86"
+                abiFilters "armeabi-v7a", "arm64-v8a", "x86"
             }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
         }
     }
 
@@ -71,5 +57,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation project(path: ':easyweb')
-
+//    implementation 'bintray.com.lax.easyweb:easyweb:0.0.1'
 }
