--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
-        maven {
-            url  "https://bintray.com/lax/easyweb"
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -27,6 +23,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://lax.bintray.com/easyweb"
+        }
     }
 }
 
