--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,27 +1,40 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
-
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     defaultConfig {
         applicationId "com.lax.example"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [
+                GETUI_APP_ID      : "",
+                GETUI_APP_KEY     : "",
+                GETUI_APP_SECRET  : "",
                 ADJUST_CODE       : "",
                 ADJUST_TRACK_TOKEN: "",
-                FACEBOOK_APP_ID   : "212367876643688",
+                FACEBOOK_APP_ID   : "21236787664368",
                 UMENG_CHANNEL     : "origin",
         ]
+
+        buildConfigField("String", "HOST", '\"http://api.nicknobody.com\"')
+        buildConfigField("String", "VEST_CODE", '\"W37WTLSF\"')
     }
+
+    flavorDimensions("app")
 
     buildTypes {
         debug {
@@ -33,7 +46,7 @@ android {
             ndk {
                 abiFilters "armeabi-v7a", "arm64-v8a", "x86"
             }
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -43,6 +56,10 @@ android {
         if (flavor.name != 'dev' && flavor.name != 'alpha') {
             flavor.manifestPlaceholders = [UMENG_CHANNEL: name]
         }
+    }
+
+    productFlavors {
+        google {}
     }
 }
 
@@ -55,6 +72,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
     implementation project(path: ':easyweb')
 //    implementation 'bintray.com.lax.easyweb:easyweb:0.0.1'
