--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -18,8 +18,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 29
-        versionCode 1
-        versionName "0.0.1"
+        versionCode 2
+        versionName "0.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -69,7 +69,7 @@ dependencies {
     api 'com.google.android.gms:play-services-ads:16+' // GAID matching
     // optional
     // Chrome Tab matching (enables 100% guaranteed matching based on cookies), androidx.browser:browser works just the same
-    api 'androidx.browser:browser:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
     //--adjust--
     api 'com.adjust.sdk:adjust-android:4.19.1'
     api 'com.adjust.sdk:adjust-android-webbridge:4.19.1'
