--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     repositories {
         google()
 //        jcenter()
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
 
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -25,13 +25,12 @@ allprojects {
     repositories {
         google()
 //        jcenter()
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
 
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://jitpack.io' }
-        maven {
-            url "https://lax.bintray.com/easyweb"
-        }
+//        maven { url "https://lax.bintray.com/easyweb" }
+        maven { url 'file:///Users/WorkSpace/localRepository' }
     }
 }
 
