--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
 
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/AppTheme.Splash">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
