--- a/permission/build.gradle
+++ b/permission/build.gradle
@@ -15,7 +15,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,5 +37,3 @@ dependencies {
 repositories {
     mavenCentral()
 }
-
-apply from: "${rootProject.projectDir}/bintrayUpload.gradle"
