--- a/example/build.gradle
+++ b/example/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-//    implementation project(path: ':easyweb')
-    implementation 'com.lax.ezweb:easyweb:0.0.2'
+    implementation project(path: ':easyweb')
+//    implementation 'com.lax.ezweb:easyweb:0.0.2'
+//    implementation 'com.lax.ezweb:ez_webkit:unspecified'
 }
