--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
             android:name="io.branch.sdk.TestMode"
             android:value="false" />
         <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="${UMENG_APP_KEY}" />
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${CHANNEL}"/>
+        <meta-data
+            android:name="CHANNEL"
+            android:value="${CHANNEL}" />
+        <meta-data
             android:name="PUSH_APPID"
             android:value="${GETUI_APP_ID}" />
         <meta-data
@@ -106,5 +115,26 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".service.FMSService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_icon"-->
+        <!--            android:resource="@drawable/ic_stat_ic_notification" />-->
+        <!--        &lt;!&ndash; Set color used with incoming notification messages. This is used when no color is set for the incoming-->
+        <!--             notification message. See README(https://goo.gl/6BKBk7) for more. &ndash;&gt;-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_color"-->
+        <!--            android:resource="@color/colorAccent" />-->
+
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_channel_id"-->
+        <!--            android:value="@string/default_notification_channel_id" />-->
     </application>
 </manifest>
