--- a/build.gradle
+++ b/build.gradle
@@ -4,29 +4,29 @@ buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
         google()
-//        jcenter()
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        jcenter()
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.8' //aop组件
+        classpath 'com.novoda:bintray-release:0.9.2'
+        classpath 'com.google.gms:google-services:4.2.0'  // Google Services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
 allprojects {
     repositories {
         google()
-//        jcenter()
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        jcenter()
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://jitpack.io' }
+        maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
 //        maven { url "https://lax.bintray.com/easyweb" }
 //        maven { url 'file:///Users/WorkSpace/localRepository' }
     }
