--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -47,34 +47,40 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation("com.squareup.okhttp3:okhttp:4.4.0")
     //image selector
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+    //友盟
+    implementation 'com.umeng.umsdk:analytics:8.0.0'
+    implementation 'com.umeng.umsdk:common:2.0.0'
     //个推推送
-    api 'com.getui:sdk-for-google-play:4.3.8.0'
+    //google play
+    implementation 'com.getui:sdk-for-google-play:4.3.8.0'
+    //normal
+//    implementation 'com.getui:sdk:2.14.0.0'
     //--facebook share--
     api 'com.facebook.android:facebook-share:[5,6)'
     //--google login--
-    api 'com.google.firebase:firebase-core:16.0.4'
-    api 'com.google.firebase:firebase-auth:16.0.4'
-    api 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     //--branch--
     // required for all Android apps
-    api 'io.branch.sdk.android:library:4.+'
+    api 'io.branch.sdk.android:library:5.+'
     // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
-    api 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
-    api 'com.google.android.gms:play-services-ads:16+' // GAID matching
+    implementation 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
+    implementation 'com.google.android.gms:play-services-ads:16+' // GAID matching
     // optional
     // Chrome Tab matching (enables 100% guaranteed matching based on cookies), androidx.browser:browser works just the same
     // implementation 'androidx.browser:browser:1.0.0'
     //--adjust--
-    api 'com.adjust.sdk:adjust-android:4.19.1'
-    api 'com.adjust.sdk:adjust-android-webbridge:4.19.1'
-    api 'com.android.installreferrer:installreferrer:1.0'
-    api 'com.google.android.gms:play-services-analytics:16.0.4'
-    api 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'com.adjust.sdk:adjust-android:4.19.1'
+    implementation 'com.adjust.sdk:adjust-android-webbridge:4.19.1'
+    implementation 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.4'
+    implementation 'com.android.installreferrer:installreferrer:1.0'
 }
 
-//apply from: "${rootProject.projectDir}/bintrayUpload.gradle"
 apply from: "${rootProject.projectDir}/novodaPublish.gradle"
+
+//apply from: "${rootProject.projectDir}/bintrayUpload.gradle"
 //apply from: "${rootProject.projectDir}/uploadLocal.gradle"
