--- a/example/build.gradle
+++ b/example/build.gradle
@@ -20,17 +20,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [
+                CHANNEL           : "origin",
                 GETUI_APP_ID      : "",
                 GETUI_APP_KEY     : "",
                 GETUI_APP_SECRET  : "",
                 UMENG_APP_KEY     : "",
-                UMENG_CHANNEL     : "origin",
-                ADJUST_CODE       : "",
+                ADJUST_APPTOKEN   : "",
                 ADJUST_TRACK_TOKEN: "",
                 FACEBOOK_APP_ID   : "21236787664368",
-                CHANNEL           : "origin",
         ]
-
         buildConfigField("String", "HOST", '\"http://api.nicknobody.com\"')
         buildConfigField("String", "VEST_CODE", '\"W37WTLSF\"')
     }
@@ -49,13 +47,14 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
 
         release {
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a", "x86"
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -74,7 +73,6 @@ android {
     productFlavors {
         google {}
     }
-
 }
 
 dependencies {
@@ -90,8 +88,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-//    implementation project(path: ':easyweb')
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.lax.ezweb:easyweb:0.0.5'
+    implementation project(path: ':easyweb')
+//    implementation 'com.lax.ezweb:easyweb:0.0.6'
+//    implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
 }
