--- a/novodaPublish.gradle
+++ b/novodaPublish.gradle
@@ -5,7 +5,7 @@ group = "com.lax.ezweb"                            // Maven Group ID for the art
 version = "0.0.8"//这里是你的版本，当你需要上传新的版本到bintry上时，只需要修改这里的版本即可
 
 publish {
-    userOrg = 'lax'//这个地方一定要填，一定要填 ！！（这里需要修改你申请账号是的组织id）
+    userOrg = 'laxygd'//这个地方一定要填，一定要填 ！！（这里需要修改你申请账号是的组织id）
     repoName = "easyweb"//发布到bintray上的仓库名
     groupId = group // Maven Group ID for the artifact，一般填你唯一的包名
     artifactId = 'easyweb'//发布到bintray上的包名
@@ -14,4 +14,4 @@ publish {
     desc = 'easy webkit library for company.'
 }
 
-//./gradlew clean generatePomFileForReleasePublication build bintrayUpload -PbintrayUser=truelyyang -PbintrayKey=8220555264e4a4c2fe5b80d4ed35d8b4282c7d01 -PdryRun=false
+//./gradlew clean generatePomFileForReleasePublication build bintrayUpload -PbintrayUser=laxygd -PbintrayKey=b15beba805902f8428f048c87c1877ff1c4e4614 -PdryRun=false
