--- a/easyweb/src/main/AndroidManifest.xml
+++ b/easyweb/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-sdk tools:overrideLibrary="com.luck.picture.lib,com.yalantis.ucrop" />
+
     <application
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-
+        android:usesCleartextTraffic="true"
+        tools:overrideLibrary="com.luck.picture.lib">
         <service
             android:name=".service.PushIntentService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
