--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -70,6 +71,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     productFlavors {
         google {}
     }
@@ -88,7 +94,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-//    implementation project(path: ':easyweb')
-    implementation 'com.lax.ezweb:easyweb:0.0.8'
+    implementation project(path: ':easyweb')
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    kapt 'com.github.bumptech.glide:compiler:4.5.0'
+//    implementation 'com.lax.ezweb:easyweb:0.0.8'
 //    implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
 }
