--- a/example/build.gradle
+++ b/example/build.gradle
@@ -28,7 +28,7 @@ android {
                 UMENG_APP_KEY     : "",
                 ADJUST_APPTOKEN   : "",
                 ADJUST_TRACK_TOKEN: "",
-                FACEBOOK_APP_ID   : "21236787664368",
+                FACEBOOK_APP_ID   : "example",
         ]
         buildConfigField("String", "HOST", '\"http://api.nicknobody.com\"')
         buildConfigField("String", "VEST_CODE", '\"W37WTLSF\"')
@@ -97,6 +97,6 @@ dependencies {
     implementation project(path: ':easyweb')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
-//    implementation 'com.lax.ezweb:easyweb:0.0.8'
+//    implementation 'com.lax.ezweb:easyweb:0.0.9'
 //    implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
 }
