--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.5'
+    //firebase
+    implementation 'com.google.firebase:firebase-core:17.0.0'
     //image selector
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -61,7 +63,6 @@ dependencies {
     //--facebook share--
     api 'com.facebook.android:facebook-android-sdk:[5,6)'
     //--google login--
-    implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     //--branch--
@@ -75,7 +76,8 @@ dependencies {
     implementation 'com.adjust.sdk:adjust-android-webbridge:4.19.1'
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    implementation 'com.android.installreferrer:installreferrer:1.0'
+    //fcm
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 }
 
 apply from: "${rootProject.projectDir}/novodaPublish.gradle"
