--- a/example/build.gradle
+++ b/example/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     implementation project(path: ':easyweb')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 //    implementation 'com.lax.ezweb:easyweb:0.0.9'
 //    implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
 }
+
+apply plugin: 'com.google.gms.google-services'
