--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -60,21 +60,21 @@ dependencies {
     //--facebook share--
     api 'com.facebook.android:facebook-android-sdk:[5,6)'
     //--google login--
-    implementation 'com.google.firebase:firebase-auth:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
     //--branch--
     // required for all Android apps
     api 'io.branch.sdk.android:library:5.+'
     // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
-    implementation 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
+    implementation 'com.google.firebase:firebase-appindexing:19.1.0' // App indexing
     implementation 'com.google.android.gms:play-services-ads:16+' // GAID matching
     //--adjust--
     implementation 'com.adjust.sdk:adjust-android:4.19.1'
     implementation 'com.adjust.sdk:adjust-android-webbridge:4.19.1'
-    implementation 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'com.android.installreferrer:installreferrer:1.1.2'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     //fcm
-    implementation 'com.google.firebase:firebase-messaging:20.1.6'
+    api 'com.google.firebase:firebase-messaging:20.1.6'
 }
 
 apply from: "${rootProject.projectDir}/novodaPublish.gradle"
