--- a/easyweb/src/main/AndroidManifest.xml
+++ b/easyweb/src/main/AndroidManifest.xml
@@ -25,6 +25,16 @@
         tools:overrideLibrary="com.luck.picture.lib">
 
         <service
+            android:name=".service.PushIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <service
+            android:name=".service.MyPushService"
+            android:exported="true"
+            android:label="PushService"
+            android:process=":pushservice" />
+
+        <service
             android:name=".service.MyFirebaseMessagingService"
             android:exported="false"
             android:stopWithTask="false">
