--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.injected.testOnly=false
 
 #仓库名称，就是在bintray官网建立的仓库的名称
 project.repositoryName=easyweb
