--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -12,13 +12,12 @@ android {
         abortOnError false
     }
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
 
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 2
-        versionName "0.1.0"
+        versionName "0.1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -59,6 +58,8 @@ dependencies {
     implementation 'com.umeng.umsdk:common:2.0.0'
     //--facebook share--
     api 'com.facebook.android:facebook-android-sdk:[5,6)'
+    //--facebook login--
+    implementation 'com.facebook.android:facebook-login:[5,6)'
     //--google login--
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
