--- a/example/build.gradle
+++ b/example/build.gradle
@@ -27,10 +27,10 @@ android {
                 UMENG_APP_KEY     : "",
                 ADJUST_APPTOKEN   : "",
                 ADJUST_TRACK_TOKEN: "",
-                FACEBOOK_APP_ID   : "example",
+                FACEBOOK_APP_ID   : "190001148735996",
         ]
-        buildConfigField("String", "HOST", '\"http://api.nicknobody.com\"')
-        buildConfigField("String", "VEST_CODE", '\"W37WTLSF\"')
+        buildConfigField("String", "HOST", '\"https://d2d0drb98uxrz0.cloudfront.net\"')
+        buildConfigField("String", "VEST_CODE", '\"CUHX4A73\"')
     }
 
     dexOptions {
@@ -107,7 +107,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
 //    implementation 'com.lax.ezweb:easyweb:0.0.9'
-    implementation 'com.lax.ezweb:easyweb-fcm:0.1.0'
+    implementation 'com.lax.ezweb:easyweb-fcm:0.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
