--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -42,13 +42,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.5'
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.4.0'
+    implementation 'com.google.firebase:firebase-core:17.4.2'
     //image selector
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -79,8 +79,7 @@ dependencies {
     //getui google play
     implementation 'com.getui:sdk-for-google-play:4.3.8.0'
 }
-
+//发布到 Bintray
 apply from: "${rootProject.projectDir}/novodaPublish.gradle"
+//发布到本地 Maven
 //apply from: "${rootProject.projectDir}/uploadLocal.gradle"
-
-//apply from: "${rootProject.projectDir}/bintrayUpload.gradle"
