--- a/example/build.gradle
+++ b/example/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -103,11 +103,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-//    implementation project(path: ':easyweb')
+    implementation project(path: ':easyweb')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
-//    implementation 'com.lax.ezweb:easyweb:0.0.9'
-    implementation 'com.lax.ezweb:easyweb-fcm:0.1.3'
+//    implementation 'com.lax.ezweb:easyweb-fcm:0.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
