--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -4,10 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    buildFeatures {
-//        dataBinding = true
-//        for view binding :
-        viewBinding = true
+//    buildFeatures {
+////        dataBinding = true
+////        for view binding :
+//        viewBinding = true
+//    }
+    dataBinding {
+        enabled = true
     }
     lintOptions {
         checkReleaseBuilds false
@@ -44,7 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -52,7 +55,7 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-core:17.4.0'
     //image selector
-    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.8'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     //友盟
@@ -82,6 +85,6 @@ dependencies {
     implementation 'com.getui:sdk-for-google-play:4.3.8.0'
 }
 //发布到 Bintray
-//apply from: "${rootProject.projectDir}/novodaPublish.gradle"
+apply from: "${rootProject.projectDir}/novodaPublish.gradle"
 //发布到本地 Maven
-apply from: "${rootProject.projectDir}/uploadLocal.gradle"
+//apply from: "${rootProject.projectDir}/uploadLocal.gradle"
