--- a/example/build.gradle
+++ b/example/build.gradle
@@ -9,10 +9,13 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
-    buildFeatures {
-//        dataBinding = true
-//        for view binding :
-        viewBinding = true
+//    buildFeatures {
+////        dataBinding = true
+////        for view binding :
+//        viewBinding = true
+//    }
+    dataBinding {
+        enabled = true
     }
     defaultConfig {
         applicationId "com.lax.example"
