--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
-kotlin.code.style=official
+#kotlin.code.style=official
 android.injected.testOnly=false
 
 #仓库名称，就是在bintray官网建立的仓库的名称
