--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,16 @@
 //        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.9.2'
-        classpath 'com.google.gms:google-services:4.3.3'  // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.4'  // Google Services plugin
         // NOTE: Do not place your application dependencies here;
         // they belong in the individual module build.gradle files
     }
@@ -25,9 +25,9 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
         maven { url 'https://dl.bintray.com/umsdk/release' }
-        maven { url "https://dl.bintray.com/laxygd/easyweb" }
+//        maven { url "https://dl.bintray.com/laxygd/easyweb" }
 //        maven { url 'https://dl.bintray.com/novoda-oss/snapshots/' }
-//        maven { url 'file:///Users/WorkSpace/localRepository' }
+        maven { url 'file:///Users/WorkSpace/localRepository' }
     }
 
     tasks.withType(Javadoc) { // 新增
