--- a/easyweb/build.gradle
+++ b/easyweb/build.gradle
@@ -4,9 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
+        // for view binding :
+        // viewBinding = true
     }
+
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -42,13 +45,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.5.0'
+    implementation 'com.google.firebase:firebase-core:17.5.1'
     //image selector
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.8'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -67,9 +70,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-appindexing:19.1.0' // App indexing
     implementation 'com.google.android.gms:play-services-ads:16+' // GAID matching
     //fcm
-    api 'com.google.firebase:firebase-messaging:20.2.4'
+    api 'com.google.firebase:firebase-messaging:20.3.0'
 }
 //发布到 Bintray
-apply from: "${rootProject.projectDir}/novodaPublish.gradle"
+//apply from: "${rootProject.projectDir}/novodaPublish.gradle"
 //发布到本地 Maven
-//apply from: "${rootProject.projectDir}/uploadLocal.gradle"
+apply from: "${rootProject.projectDir}/uploadLocal.gradle"
