--- a/easyweb/src/main/AndroidManifest.xml
+++ b/easyweb/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.facebook.todo">
+    package="com.uo.cure">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme">
 
         <service
-            android:name="com.facebook.todo.service.MyFirebaseMessagingService"
+            android:name=".service.MyFirebaseMessagingService"
             android:exported="false"
             android:stopWithTask="false">
             <intent-filter>
@@ -42,15 +42,15 @@
             android:value="default_channel_id" />
 
         <activity
-            android:name="com.facebook.todo.WebActivity"
+            android:name=".web.WebActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name="com.facebook.todo.PureWebActivity"
+            android:name=".web.PureWebActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name="com.facebook.todo.permission.PermissionActivity"
+            android:name=".permission.PermissionActivity"
             android:theme="@style/Translucent" />
     </application>
 </manifest>
