--- a/example/build.gradle
+++ b/example/build.gradle
@@ -28,8 +28,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [
-                CHANNEL           : "origin",
-                FACEBOOK_APP_ID   : "190001148735996",
+                CHANNEL        : "origin",
+                FACEBOOK_APP_ID: "190001148735996",
         ]
         buildConfigField("String", "HOST", '\"https://d2d0drb98uxrz0.cloudfront.net\"')
         buildConfigField("String", "VEST_CODE", '\"CUHX4A73\"')
@@ -95,20 +95,23 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation("com.squareup.okhttp3:okhttp:4.4.0")
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
-    implementation project(path: ':easyweb')
+//    implementation project(path: ':easyweb')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
-//    implementation 'com.lax.ezweb:easyweb-fcm:0.1.8'
+    implementation 'com.lax.ezweb:easyweb-fcm:0.1.8'
+    implementation 'com.just.agentweb:agentweb-androidx:4.1.4' // (必选)
+    implementation 'com.just.agentweb:filechooser-androidx:4.1.4'// (可选)
+    implementation 'com.download.library:downloader-androidx:4.1.4'// (可选)
 }
 
 apply plugin: 'com.google.gms.google-services'
