--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -18,22 +18,22 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
-#kotlin.code.style=official
+kotlin.code.style=official
 android.injected.testOnly=false
+android.enableR8.fullMode=true
 
-#仓库名称，就是在bintray官网建立的仓库的名称
-project.repositoryName=easyweb
-#项目名称
-project.name=cartlib //注意:project名字 与 library名字一致 否则会出现上传文件目录结构问题
-#项目组id
-project.groupId=bintray.com.lax
-#项目id,一般同project.name
-project.artifactId=ez_web
-#打包类型
-project.packaging=aar
-#项目官方网站地址
-project.siteUrl=https://github.com/talkeryang/ez_webkit
-#项目git地址
-project.gitUrl=https://github.com/talkeryang/ez_webkit.git
-#生成的javadoc名称
-javadoc.name=zewebkit
+#启用与禁用 R8
+
+# 显式启用 R8
+#android.enableR8 = false
+# 1. 只对 Android Library module 停用 R8 编译器
+#android.enableR8.libraries = false
+# 2. 对所有 module 停用 R8 编译器
+#android.enableR8 = false
+
+#启用与禁用 D8
+
+# 显式启用 D8
+#android.enableD8 = true
+# 显式禁用 D8
+#android.enableD8 = false
